Add agent task endpoints (#4)
* Add agent registration endpoint

* Add array handling for Agent job_types and media_types

* Add Api::V1::Exec::TasksController

* Implement TasksController#poll

* Add task assignment

* Add task update route and specs

* Change task spec subject to build

* Tweak rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,9 +20,18 @@ Layout/LineLength:
   Exclude:
     - 'config/**/*'
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
 Metrics/MethodLength:
+  Max: 15
   Exclude:
     - 'db/**/*'
+
+RSpec/MultipleExpectations:
+  Exclude:
+    - 'spec/requests/**/*'
 
 Style/BlockComments:
   Exclude:
