--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,5 +7,6 @@ ADD Gemfile /app
 ADD Gemfile.lock /app
 RUN bundle config set without 'development test'
 RUN bundle install
-ENTRYPOINT ["bundle", "exec", "puma", "-C", "config/puma.rb"]
+ENTRYPOINT ["bundle", "exec"]
+CMD ["puma", "-C", "config/puma.rb"]
 ADD . /app
